# Formatter

./: meson.build  org.gnome.Example.json
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml
po/: meson.build
src/: application.vala  main.vala  meson.build  window.ui  window.vala
